<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="denim_jeans"><![CDATA[Denim & Jeans]]></string>
    <string name="shorts_skirts"><![CDATA[Shorts & Skirts]]></string>
    <string name="dresses_c0_ords"><![CDATA[Dresses & C0-ORDS]]></string>
    <string name="dresses_cords"><![CDATA[Dresses & Cords]]></string>
    <string name="pricetag"><![CDATA[Price - ]]></string>
    <string name="dress_model"><![CDATA[Model]]></string>

    //heli

    <string name="buy_now1"><![CDATA[Buy Now]]></string>
    <string name="cloth_size"><![CDATA[Size - ]]></string>
    <string name="cloth_qty"><![CDATA[Qty - ]]></string>
    <string name="ofz_frock">Office Frock</string>
    <string name="price_lkr2000">LKR2000</string>
    <string name="size_mid">Medium</string>
    <string name="price_lkr3000">LKR3000</string>
    <string name="price_lkr3500">LKR3500</string>
    <string name="clothes_bag">My Bag</string>
    <string name="helinsa">Helinsa</string>
    <string name="total_price">Total Price - </string>
    <string name="Name">Name</string>
    <string name="Category">Category</string>


    <string name="Description">Description</string>
    <string name="Price">Price</string>

    <string name="Pictures">Pictures</string>

    //payment
    <string name="pay_number"><![CDATA[Number]]></string>
    <string name="pay_firstname"><![CDATA[First name]]></string>
    <string name="pay_lastname"><![CDATA[Last name]]></string>
    <string name="pay_phone"><![CDATA[Phone]]></string>
    <string name="pay_email"><![CDATA[Email]]></string>
    <string name="pay_card1"><![CDATA[Visa]]></string>
    <string name="pay_card2"><![CDATA[Master Card]]></string>
    <string name="pay_card3"><![CDATA[American Express]]></string>
    <string name="pay_cvv"><![CDATA[CVV]]></string>
    <string name="pay_ex"><![CDATA[Expires]]></string>
    <string name="pay_street"><![CDATA[Street]]></string>
    <string name="pay_city"><![CDATA[City]]></string>


    <string name="my_orders1">My Orders</string>
    <string name="go_shop1">Go Shopping</string>
    <string name="size_guide1">Size Guide</string>
    <string name="edit1">Edit Profile</string>
    <string name="user_prof">My Profile</string>
    <string name="name1">Name</string>
    <string name="mail">Email</string>
    <string name="address1">Postal Address</string>
    <string name="contact1">Phone Number</string>
    <string name="wishlist1">Wish List</string>
    <string name="title_activity_products">Products</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>



